--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
   "name": "vue-mermaid",
   "description": "flowchart of mermaid with vue componet",
-  "version": "0.0.1",
+  "version": "0.0.3",
+  "main": "dist/vue-mermaid.js",
   "author": "mark_tun <yuguang.liu@foxmail.com>",
   "license": "MIT",
   "files": [
     "dist",
     "src"
+  ],
+  "keywords": [
+    "vue",
+    "vue-mermaid",
+    "vue flowchart",
+    "flowchart"
   ],
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
@@ -16,8 +23,7 @@
     "url": "https://github.com/robin1liu/vue-mermaid.git"
   },
   "dependencies": {
-    "mermaid": "^8.0.0-rc.8",
-    "vue": "^2.5.11"
+    "mermaid": "^8.0.0-rc.8"
   },
   "browserslist": [
     "> 1%",
@@ -35,6 +41,7 @@
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
+    "webpack-dev-server": "^2.9.1",
+    "vue": "^2.5.11"
   }
 }
