Added support for more edgeTypes. Added support for links.

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "vue-mermaid",
   "description": "flowchart of mermaid with vue componet",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "main": "dist/vue-mermaid.js",
   "author": "mark_tun <yuguang.liu@foxmail.com>",
+  "contributors": ["Filipe Pinheiro <filipemcpinheiro@gmail.com>"],
   "license": "MIT",
   "files": [
     "dist",
