--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "version": "0.0.6",
   "main": "dist/vue-mermaid.js",
   "author": "mark_tun <yuguang.liu@foxmail.com>",
-  "contributors": ["Filipe Pinheiro <filipemcpinheiro@gmail.com>"],
+  "contributors": [
+    "Filipe Pinheiro <filipemcpinheiro@gmail.com>"
+  ],
   "license": "MIT",
   "files": [
     "dist",
@@ -24,7 +26,7 @@
     "url": "https://github.com/robin1liu/vue-mermaid.git"
   },
   "dependencies": {
-    "mermaid": "^8.0.0-rc.8"
+    "mermaid": "^8.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.1.0",
